appId: com.kavikividya.app
---
- launchApp:
    clearState: true
- openLink: kavi-ki-vidya://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081
- extendedWaitUntil:
    visible: "Continue"
    timeout: 10000
- tapOn: "Continue"
- tapOn: "Continue"
- tapOn: "Start speaking"
- tapOn: "Learn"
- extendedWaitUntil:
    visible:
      id: "learn-screen"
    timeout: 10000
- tapOn:
    id: "learn-start-lesson-button"
- extendedWaitUntil:
    visible:
      id: "lesson-overview-screen"
    timeout: 10000
- tapOn:
    id: "lesson-overview-start-button"
- extendedWaitUntil:
    visible:
      id: "lesson-activity-screen"
    timeout: 10000
