appId: com.kavikividya.app
---
- launchApp:
    clearState: true
- openLink: kavi-ki-vidya://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081
- extendedWaitUntil:
    visible: "Continue"
    timeout: 10000
- tapOn: "Continue"
- tapOn: "Continue"
- tapOn: "Start speaking"
- extendedWaitUntil:
    visible:
      id: "speak-screen"
    timeout: 10000
- tapOn:
    id: "speak-guided-roleplay-button"
- extendedWaitUntil:
    visible:
      id: "roleplay-screen"
    timeout: 10000
